<resources>
    <string name="app_name">StemApp</string>

    <string name="voteButtonText">Stem</string>
    <string name="voteButtonNoBallot">Wachten op stembiljet</string>
    <string name="startButtonText">Stemmen</string>
    <string name="verifyButtonText">Controleer uw uitgebrachte stem</string>

    <string name="partyTitle">Kiezen</string>
    <string name="successTitle">Stem</string>
    <string name="verificationTitle">Stem controle</string>
    <string name="votingTilesTitle">Kiezen</string>
    <string name="confirmationDialogTitle">U stemt op</string>
    <string name="yes">Ja</string>
    <string name="no">Nee</string>
    <string name="successText">Succesvol gestemd!</string>
    <string name="secretTokenWarning">Onthoud deze letter om uw keuze te controleren</string>
    <string name="countdownWarning">Dit verdwijnt over 4 seconden!</string>
    <string name="goHomeButtonText">Naar thuisscherm</string>
    <string name="wallet">%1$s</string>
    <string name="noWallet">No wallet avaiable</string>

    <string name="preferenceFile">com.milvum.stemmapp.PREFERENCES</string>

    <!-- Toast messages -->
...
