<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.milvum.stemapp.HomeActivity">

    <LinearLayout
        android:layout_width="fill_parent"
...
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/qrImageButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:adjustViewBounds="true"
                android:background="@color/colorPrimary"
                android:onClick="showQRDialog"
                android:padding="10dp"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/qr_icon" />

            <ImageButton
                android:id="@+id/quitImageButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentRight="true"
                android:adjustViewBounds="true"
                android:background="@color/colorPrimary"
                android:onClick="quitDummy"
...
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginRight="10dp"
                android:layout_weight="0"
                android:src="@mipmap/logo" />
...
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <Button
            android:id="@+id/nextButton"
            style="@style/CustomButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="@color/white"
            android:text="@string/startButtonText"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/verifyButton"
            style="@style/CustomButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:background="@android:color/white"
            android:text="@string/verifyButtonText"
...
