<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_voting_tiles"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.milvum.stemapp.VotingTilesActivty">



    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/vote_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnWidth="90dp"
        android:numColumns="auto_fit"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:layout_marginTop="40dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        tools:listitem="@layout/vote_square"
        />

</LinearLayout>
